@@ -318,6 +318,7 @@ coordinate</li>
 <li>HP 82162A printer font improvements (contributed by Christoph Gießelink).</li>
 <li>HP 82162A printer output width corrected for pixel size=1</li>
 <li>Harmonization of hex number output in the scope window (contributed by Christoph Gießelink).</li>
+<li>Fixed a cursor width problem, which occurred on some platforms.</li>
 </ul>
 <!-- End content -->
 
