@@ -34,6 +34,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 <li>HP 82162A printer font improvements (contributed by Christoph Gießelink).</li>
 <li>HP 82162A printer output width corrected for pixel size=1</li>
 <li>Harmonization of hex number output in the scope window (contributed by Christoph Gießelink).</li>
+<li>Fixed a cursor width problem, which occurred on some platforms.</li>
 </ul>
 <!-- End content -->
 
